--- a/libs/rtp2text/package.json
+++ b/libs/rtp2text/package.json
@@ -13,6 +13,7 @@
     "rx.mini": "^1.2.2",
     "vosk": "^0.3.39",
     "fluent-ffmpeg": "^2.1.2",
+    "@discordjs/opus": "^0.9.0",
     "werift-rtp": "0.7.6"
   },
   "devDependencies": {
