--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Depacketize", "depacketizer", "vosk", "werift"]
+  "cSpell.words": ["Depacketize", "depacketizer", "voicevox", "vosk", "werift"]
 }
