--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "zx": "^7.2.1"
   },
   "packageManager": "npm@8.12.2",
   "engines": {
