--- a/libs/voicevox-client/package.json
+++ b/libs/voicevox-client/package.json
@@ -7,8 +7,7 @@
   "main": "index.js",
   "scripts": {
     "example:client": "parcel examples/to-webrtc/client/index.html",
-    "example:webrtc": "ts-node-dev examples/to-webrtc/server.ts",
-    "voicevox": "zx scripts/voicevox.mjs"
+    "example:webrtc": "ts-node-dev examples/to-webrtc/server.ts"
   },
   "dependencies": {
     "axios": "^1.3.5"
