--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   ],
   "scripts": {
     "#add-package": "npm init -w apps/a",
-    "voicevox": "zx scripts/voicevox.mjs"
+    "voicevox": "zx scripts/voicevox.mjs",
+    "server": "cd apps/gpt-voice-server && npm run dev"
   },
   "devDependencies": {
     "@types/jest": "^29.2.4",
