--- a/apps/gpt-voice-client/package.json
+++ b/apps/gpt-voice-client/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@chakra-ui/react": "^2.5.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "framer-motion": "^10.11.2"
   },
   "devDependencies": {},
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build ./src/index.html --dist-dir build --public-url ."
+    "build": "rm -rf build && parcel build ./src/index.html --dist-dir build --public-url ."
   },
   "author": "",
   "license": "ISC"
