--- a/apps/gpt-voice-server/package.json
+++ b/apps/gpt-voice-server/package.json
@@ -9,7 +9,9 @@
     "dev": "ts-node-dev src/main.ts"
   },
   "dependencies": {
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "date-fns": "^2.29.3",
+    "date-fns-tz": "^2.0.0"
   },
   "devDependencies": {}
 }
