--- a/apps/gpt-voice-client/package.json
+++ b/apps/gpt-voice-client/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "parcel src/index.html",
+    "dev": "rm -rf dist && parcel src/index.html",
     "build": "rm -rf build && parcel build ./src/index.html --dist-dir build --public-url ."
   },
   "author": "",
