--- a/apps/gpt-voice-server/package.json
+++ b/apps/gpt-voice-server/package.json
@@ -9,9 +9,10 @@
     "dev": "ts-node-dev src/main.ts"
   },
   "dependencies": {
-    "openai": "^3.2.1",
     "date-fns": "^2.29.3",
-    "date-fns-tz": "^2.0.0"
+    "date-fns-tz": "^2.0.0",
+    "openai": "^3.2.1",
+    "rx.mini": "^1.3.1"
   },
   "devDependencies": {}
 }
