--- a/apps/gpt-voice-client/package.json
+++ b/apps/gpt-voice-client/package.json
@@ -2,19 +2,21 @@
   "name": "gpt-voice-client",
   "version": "0.0.1",
   "description": "",
+  "license": "ISC",
+  "author": "",
+  "scripts": {
+    "build": "rm -rf build && parcel build ./src/index.html --dist-dir build --public-url .",
+    "dev": "rm -rf dist && parcel src/index.html"
+  },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@chakra-ui/icons": "^2.0.18",
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "framer-motion": "^10.11.2"
+    "framer-motion": "^10.11.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0"
   },
-  "devDependencies": {},
-  "scripts": {
-    "dev": "rm -rf dist && parcel src/index.html",
-    "build": "rm -rf build && parcel build ./src/index.html --dist-dir build --public-url ."
-  },
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {}
 }
