--- a/apps/gpt-voice-client/package.json
+++ b/apps/gpt-voice-client/package.json
@@ -16,7 +16,12 @@
     "framer-motion": "^10.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "recoil": "^0.7.7",
+    "rx.mini": "^1.3.1",
+    "uuid": "^9.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/uuid": "^9.0.1"
+  }
 }
