--- a/apps/gpt-voice-client/package.json
+++ b/apps/gpt-voice-client/package.json
@@ -5,8 +5,9 @@
   "license": "ISC",
   "author": "",
   "scripts": {
-    "build": "rm -rf build && parcel build ./src/index.html --dist-dir build --public-url .",
-    "dev": "rm -rf dist && parcel src/index.html"
+    "build": "rm -rf dist && vite build",
+    "dev": "vite",
+    "type": "tsc --noEmit"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.18",
@@ -22,6 +23,8 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.1"
+    "@types/uuid": "^9.0.1",
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^4.3.1"
   }
 }
