--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "docker-build:server": "docker build -t gpt-voice-server -f ./docker/gpt-voice-server/Dockerfile .",
     "docker-run:server": "docker run -p 8080:8080 gpt-voice-server",
     "server": "cd apps/gpt-voice-server && npm run dev",
+    "type": "npm run type --workspaces --if-present",
     "voicevox": "zx scripts/voicevox.mjs"
   },
   "devDependencies": {
