--- a/apps/gpt-voice-client/package.json
+++ b/apps/gpt-voice-client/package.json
@@ -20,7 +20,8 @@
     "react-icons": "^4.8.0",
     "recoil": "^0.7.7",
     "rx.mini": "^1.3.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "@shinyoshiaki/gpt-voice-rpc": "^0.0.1"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.1",
