--- a/apps/gpt-voice-server/package.json
+++ b/apps/gpt-voice-server/package.json
@@ -13,7 +13,8 @@
     "date-fns": "^2.29.3",
     "date-fns-tz": "^2.0.0",
     "openai": "^3.2.1",
-    "rx.mini": "^1.3.1"
+    "rx.mini": "^1.3.1",
+    "axios": "^1.4.0"
   },
   "devDependencies": {}
 }
