--- a/apps/gpt-voice-server/package.json
+++ b/apps/gpt-voice-server/package.json
@@ -10,11 +10,13 @@
     "type": "tsc --noEmit"
   },
   "dependencies": {
+    "@fastify/cors": "^8.2.1",
+    "axios": "^1.4.0",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^2.0.0",
+    "fastify": "^4.17.0",
     "openai": "^3.2.1",
-    "rx.mini": "^1.3.1",
-    "axios": "^1.4.0"
+    "rx.mini": "^1.3.1"
   },
   "devDependencies": {}
 }
