--- a/libs/rtp2text/package.json
+++ b/libs/rtp2text/package.json
@@ -14,7 +14,7 @@
     "vosk": "^0.3.39",
     "fluent-ffmpeg": "^2.1.2",
     "@discordjs/opus": "^0.9.0",
-    "werift-rtp": "0.7.6"
+    "werift-rtp": "0.7.11-rc.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.33",
