--- a/apps/gpt-voice-server/package.json
+++ b/apps/gpt-voice-server/package.json
@@ -16,7 +16,8 @@
     "date-fns-tz": "^2.0.0",
     "fastify": "^4.17.0",
     "openai": "^3.2.1",
-    "rx.mini": "^1.3.1"
+    "rx.mini": "^1.3.1",
+    "werift": "^0.18.3-rc.0"
   },
   "devDependencies": {}
 }
