--- a/libs/audio2rtp/package.json
+++ b/libs/audio2rtp/package.json
@@ -10,7 +10,8 @@
     "axios": "^1.3.5",
     "fluent-ffmpeg": "^2.1.2",
     "werift-rtp": "^0.7.6",
-    "rx.mini": "^1.2.2"
+    "rx.mini": "^1.2.2",
+    "wavefile": "^11.0.0"
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.21"
