--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "docker-run:server": "docker run -p 8080:8080 gpt-voice-server",
     "server": "cd apps/gpt-voice-server && npm run dev",
     "type": "npm run type --workspaces --if-present",
-    "voicevox": "zx scripts/voicevox.mjs"
+    "voicevox": "zx scripts/voicevox.mjs",
+    "dev": "npm-run-all -p voicevox server client"
   },
   "devDependencies": {
     "@types/jest": "^29.2.4",
@@ -32,6 +33,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "jest": "^29.3.1",
+    "npm-run-all": "^4.1.5",
     "organize-imports-cli": "^0.10.0",
     "prettier": "^2.8.1",
     "process": "^0.11.10",
