ブラウザエージェントの実装中

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,15 @@
     "Chakra",
     "Depacketize",
     "depacketizer",
+    "langchain",
     "openai",
     "openapi",
+    "serpapi",
+    "serper",
     "typebox",
     "voicevox",
     "vosk",
+    "webbrowser",
     "werift"
   ]
 }
