--- a/apps/gpt-voice-server/package.json
+++ b/apps/gpt-voice-server/package.json
@@ -17,7 +17,12 @@
     "fastify": "^4.17.0",
     "openai": "^3.2.1",
     "rx.mini": "^1.3.1",
-    "werift": "^0.18.3-rc.0"
+    "werift": "^0.18.3-rc.0",
+    "langchain": "^0.0.78",
+    "cheerio": "^1.0.0-rc.12",
+    "clarinet": "^0.12.5"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/clarinet": "^0.12.1"
+  }
 }
