--- a/libs/audio2rtp/package.json
+++ b/libs/audio2rtp/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "main": "index.js",
-  "scripts": {},
+  "main": "lib/index.js",
+  "files": [
+    "lib"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "deploy": "npm run build && npm publish"
+  },
   "dependencies": {
     "axios": "^1.3.5",
     "fluent-ffmpeg": "^2.1.2",
